test product service implmented